--- a/expose.tex
+++ b/expose.tex
@@ -186,10 +186,10 @@ The market for mobile smartphone and tablet applications (apps) is growing exten
 It is increasingly easier for companies or even single developers to create unique apps that reach millions of users around the planet via digital app stores.\footnote{Previous two sentences following \cite{Enck2011}, p. 1}
 This market growth effected mobile health (\acs{mHealth}) apps as well. 
 More and more \mH apps are available that support the users in resolving their health related issues and that try to patch information deficiencies. 
-The data tools and information systems that have been used and maintained in hospitals for decades are recently carried out to distributed cloud services for virtually everyone to consume.\footnote{\cite{He2014a}, p. 645}
+The data tools and information systems that have been used and maintained in hospitals for decades are recently carried out to distributed cloud services for virtually everyone to consume.\footnote{\cite{He2014}, p. 645}
 
 Users are asked to expose their personal health related information, in order to receive a tailored app that fits their custom preferences.\footnote{\cite{Chen2012}, p. 2}
-The users reveal vulnerable information about their health status, while it remains mostly unclear how and where the data is send, processed and stored.\footnote{\cite{He2014a}, p. 652}
+The users reveal vulnerable information about their health status, while it remains mostly unclear how and where the data is send, processed and stored.\footnote{\cite{He2014}, p. 652}
 
 The information about these privacy related practices of \ap s and their offered apps should be stated in the privacy policy document, provided by the \ap.
 Processing these \pps requires a higher level of education and time to read through large bodies of text, to find the relevant information. 
@@ -301,7 +301,7 @@ The first step is to recover a java archive (\acs{JAR}) file from the \acs{APK} 
 \acs{JAR} files contain a collection of .class files. 
 These .class files hold Java bytecode that can be interpreted by the Java virtual machine (\acs{JVM}) at application runtime.\footnote{The previous two sentences follow \cite{Enck2011}, p. 2} 
 In order to extract the Java bytecode .class files, we use the command line tool \textit{dex2jar}\footnote{\cite{Pan2010}}. 
-The abbreviation \acs{DEX} stands for \acl{DEX} and refers to the binary collection of compiled Java classes within the \acs{APK} package file.\footnote{See \cite{xu2013techniques}, p. 6}
+The abbreviation \acs{DEX} stands for \acl{DEX} and refers to the binary collection of compiled Java classes within the \acs{APK} package file.\footnote{See \cite{xu2013}, p. 6}
 
 Step two includes the actual decompiling phase of the Java bytecode back into .java files. 
 A .java file contains exactly one Java \textit{class} in humanly readable Java code. 
@@ -317,7 +317,7 @@ For the case of manually validating the output of the automated privacy risk ass
 To make manual code inspections easier to read, a tool called \textit{astyle}\footnote{\cite{Davidson2006}} will be used. 
 \textit{astyle} sets appropriate levels on indenting to the source code, to improve the reading experience.
 
-In the last step of our decompilation process, a tool called \textit{apktool}\footnote{\cite{Tumbleson2010}} is used to extract all resource files from the \acs{APK} file. Resource files could be images or XML files that are not compiled into application code.\footnote{See \cite{xu2013techniques}, p. 5}
+In the last step of our decompilation process, a tool called \textit{apktool}\footnote{\cite{Tumbleson2010}} is used to extract all resource files from the \acs{APK} file. Resource files could be images or XML files that are not compiled into application code.\footnote{See \cite{xu2013}, p. 5}
 The XML files are of interest for the automated privacy risk analysis, because Android text input controls can be defined in an external XML file, rather than in the source code itself.
 
 % static code analysis %
